fixed navbar arrows and alignment

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -17,13 +17,15 @@
   background-color: #121212;
   color: white;
   text-align: right;
-  padding-right: 20px;
+  padding-right: 30px;
+  padding-bottom: 20px;
   a {
     color: white;
   }
 }
 .nav-item {
   text-align: right;
+
 }
 
 .fa-cog {
@@ -47,4 +49,7 @@
   text-align: right;
   padding-right: 20px;
 
+}
+.underline {
+  text-decoration: underline;
 }
